# pro-verify-replit

./: .env.example  .gitignore  .replit  alembic.ini  package-lock.json  package.json  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 20260526_0001_a1b2c3d4e5f6_initial_schema.py  20260526_0002_b2c3d4e5f6a1_add_foreign_keys_and_indexes.py
backend/: database.py  main.py  models.py  requirements.txt
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.tsx  index.css
frontend/src/components/: ConfirmModal.tsx  RowActions.tsx  Toast.tsx  Topbar.tsx
frontend/src/pages/: Activity.tsx  BatchDetails.tsx  BatchUploads.tsx  Brands.tsx  Dashboard.tsx  Login.tsx  Upload.tsx  Verify.tsx
frontend/src/utils/: time.ts
